tests/snapshots/examples_fixtures/aoc__2025__aoc_day6_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day6_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:55:35
   |
55 |         split(trim(line), " ") |> filter(/x -> x != "")
   |                                   ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:59:18
   |
59 |         lines |> map(/line -> split_words_line(line))
   |                  ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:122:17
    |
122 |         cols |> fold(0, /(acc, col) -> acc + eval_day06a_col(col))
    |                 ^^^^

Hint:
  Define it first: let fold = ...;

Help:
  Did you mean `cols`?


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:238:19
    |
238 |         groups |> fold(0, /(acc, g) -> acc + eval_day06b_group(g))
    |                   ^^^^

Hint:
  Define it first: let fold = ...;

Help:
  Did you mean `cols`?

Found 4 errors.
== stdout ==
<not executed>
